plugin/src/test/files/neg/deferred.scala
import scalaz.meta.minimal

@minimal("deferred")
trait deferred {
  def deferred: Int
}